Created new branch

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>EcoHub</title>
 </head>
 <body>
-    <div id="nav"></div>
+    <div id="nav">
+        <h3></h3>
+        <h3></h3>
+        <h3></h3>
+    </div>
 </body>
 </html>
