--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
 </head>
 <body>
     <div id="nav">
-        <h3></h3>
-        <h3></h3>
-        <h3></h3>
+        <h3>ISSUES</h3>
+        <h3>TRACKS</h3>
+        <h3>RECOMMENDATIONS</h3>
+        <h3>GARDENS</h3>
+        <h3>CENTERS</h3>
+        <h3>BUSSINESSES</h3>
     </div>
 </body>
 </html>
