--- a/main.html
+++ b/main.html
@@ -13,8 +13,16 @@
 	<div class="value-container">
 		<p>Value: <span id="demo">0</span></p>
 	</div>
-	<input type="range" min="0" max="100" value="0" class="slider" id="my-range">
+	<input type="range" min="0" max="5" value="0" class="slider" id="my-range" list="ticks">
 	</div>
+	<datalist id="ticks">
+		<option>0</option>
+		<option>1</option>
+		<option>2</option>
+		<option>3</option>
+		<option>4</option>
+		<option>5</option>
+	</datalist>
 	<script type="text/javascript" src="trig.js"></script>
 </body>
 
