--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <body>
     <!-- NAV BAR -->
     <div id="nav">
+      <img src="resources/images/Earth-spinning-rotating-animation-40.gif" alt="" id="gif">
       <img src="resources/images/logo.png" alt="" />
       <h3 class="animation">ISSUES</h3>
       <h3 class="animation">TRACKS</h3>
