--- a/main.html
+++ b/main.html
@@ -6,13 +6,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Document</title>
 	<script function show_value(x) { document.getElementById("slider_value").innerHTML=x;}></script>
+	<link rel="stylesheet" href="scroll.css">
 
 </head>
 
 <body>
-	<div class="value-container">
-		<p>Value: <span id="demo">0</span></p>
-	</div>
+	
 	<input type="range" min="0" max="5" value="0" class="slider" id="my-range" list="ticks">
 	</div>
 	<datalist id="ticks">
