--- a/main.html
+++ b/main.html
@@ -5,20 +5,18 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Document</title>
-	<<<<<<< HEAD <style>
+	<style>
 		.slider,
 		#my-range {
-		width: 60%;
-		/* background: linear-gradient(to right, #6b8dff 0%, #ff2a5f 0%, #fff 0%, #fff 100%); */
-		background-color: red;
-		height: 20px;
+			width: 60%;
+			background-color: red;
+			height: 20px;
 		}
-		</style>
-		=======
-		<script function show_value(x) { document.getElementById("slider_value").innerHTML=x;}></script>
-		<link rel="stylesheet" href="scroll.css">
+	</style>
+	=======
+	<script function show_value(x) { document.getElementById("slider_value").innerHTML=x;}></script>
+	<link rel="stylesheet" href="scroll.css">
 
-		>>>>>>> cd9b97ee1a1812c1092136fef5c1d6979f7a12a7
 </head>
 
 <body>
