--- a/main.html
+++ b/main.html
@@ -13,7 +13,6 @@
 			height: 20px;
 		}
 	</style>
-	<script function show_value(x) { document.getElementById("slider_value").innerHTML=x;}></script>
 	<link rel="stylesheet" href="scroll.css">
 
 </head>
@@ -30,8 +29,11 @@
 		<option>4</option>
 		<option>5</option>
 	</datalist>
-	<img id="img" src=imageshown>
+	<!-- <script type="text/javascript"> -->
+	<!-- 	document.getElementById("img").src = "resources/images/himalaya.jpg"; -->
+	<!-- </script> -->
 	<script type="text/javascript" src="trig.js"></script>
+	<img id="img" src="resources/images/himalaya.jpg">
 </body>
 
 </html>
