--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <h1><span id="element"></span></h1>
           <img src="resources/images/tracker-side.jpg" alt="">
           <p>Knowing your carbon footprint can be the first step to understanding your impact. It empowers you to take action in all areas of your life. Our carbon footprint calculator makes it easy and can take less than ten minutes. <br> <br> Everything we do has an impact. From how we commute to work, to what we buy at the grocery store, our lifestyle choices contribute to our personal carbon footprint.</p>
-          <a href="http://172.26.145.55:8502/" target="_blank"><button type="submit" id="btn">Calculate Your Footprint Now</button></a>
+          <a href="https://10002calculatetotalemissionstotalemissionsroundtransportatione.streamlit.app/" target="_blank"><button type="submit" id="btn">Calculate Your Footprint Now</button></a>
         </div>
         <hr id="hr2">
         <!-- PAGE 6 -->
@@ -80,7 +80,21 @@
         <!-- PAGE 7 -->
         <div id="page7">
           <h1>Local Community Gardens</h1>
+          <a href="https://www.google.com/maps/dir//PQ27%2BCGM,+Sukhna+Path,+46A,+Sector+46,+Chandigarh,+160047/@30.7010529,76.6813881,12z/data=!3m1!4b1!4m8!4m7!1m0!1m5!1m1!1s0x390fec442e35f357:0x57865478e6421726!2m2!1d76.7637894!2d30.7010789?entry=ttu" target="_blank" ><img src="resources/images/Gardens" id="img1" alt=""></a>
+          <a href="https://www.google.com/maps/dir//PQ27%2BCGM,+Sukhna+Path,+46A,+Sector+46,+Chandigarh,+160047/@30.7010529,76.6813881,12z/data=!3m1!4b1!4m8!4m7!1m0!1m5!1m1!1s0x390fec442e35f357:0x57865478e6421726!2m2!1d76.7637894!2d30.7010789?entry=ttu" target="_blank" ><h3 id="h31" >Gardens Of Shrubs - Community Garden</h3></a>
+          <p id="p1">4.4</p><i id="i1" class='bx bxs-star' style='color:#f3e400'  ></i><i id="i2" class='bx bxs-star' style='color:#f3e400'  ></i><i id="i3" class='bx bxs-star' style='color:#f3e400'  ></i><i id="i4" class='bx bxs-star' style='color:#f3e400'  ></i><i id="i5" class='bx bxs-star-half' style='color:#f3e400' ></i><p id="p2">(167) Garden Chandigarh</p>
         </div>
+        <!-- PAGE 8 -->
+        <div id="page8">
+          <img src="resources/images/Gardens2.jpg" id="img1" alt="">
+          <h3 id="h31" >Amaltas Garden - Community Garden</h3>
+          <p id="p1">3.6</p><i id="i1" class='bx bxs-star' style='color:#f3e400'  ></i><i id="i2" class='bx bxs-star' style='color:#f3e400'  ></i><i id="i3" class='bx bxs-star' style='color:#f3e400'  ></i><i id="i4" class='bx bxs-star-half' style='color:#f3e400' ></i> <i id="i5" class='bx bx-star' style='color:#f3e400' ></i><p id="p2">(27) Garden Ludhiana</p>
+        </div>
+        <!-- PAGE 9 -->
+        <div id="page9">
+          <img src="resources/images/Gardens3.jpg" id="img1" alt="">
+          <h3 id="h31" >Garden Of Annuals - Community Garden</h3>
+          <p id="p1">4.4</p><i id="i1" class='bx bxs-star' style='color:#f3e400'  ></i><i id="i2" class='bx bxs-star' style='color:#f3e400'  ></i><i id="i3" class='bx bxs-star' style='color:#f3e400'  ></i><i id="i4" class='bx bxs-star' style='color:#f3e400'  ></i><i id="i5" class='bx bxs-star-half' style='color:#f3e400' ></i><p id="p2">(818) Garden Chandigarh</p>
     </div>
     <script src="resources/scripts/gsap.min.js"></script>
     <script src="resources/scripts/ScrollTrigger.min.js"></script>
