adding link of google maps

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <a href="#page2"><h3 class="animation">ISSUES</h3></a>
       <a href="#page5"><h3 class="animation">TRACKS</h3></a>
       <a href="#page6"><h3 class="animation">RECOMMENDATIONS</h3></a>
-      <h3 class="animation">GARDENS</h3>
+      <a href="#page7"><h3 class="animation">GARDENS</h3></a>
       <h3 class="animation">CENTERS</h3>
       <h3 class="animation">BUSINESSES</h3>
     </div>
@@ -86,8 +86,8 @@
         </div>
         <!-- PAGE 8 -->
         <div id="page8">
-          <img src="resources/images/Gardens2.jpg" id="img1" alt="">
-          <h3 id="h31" >Amaltas Garden - Community Garden</h3>
+          <a href="https://www.google.com/maps/dir//3199,+Urban+Estate+Dugri,+Phase+2,+Urban+Estate+Dugri,+Ludhiana,+Punjab+141002/@30.8714831,75.7494626,12z/data=!3m1!4b1!4m8!4m7!1m0!1m5!1m1!1s0x391a8240cba16c4b:0xb96341a0afcc9c31!2m2!1d75.8318639!2d30.8715092?entry=ttu" target="_blank"><img src="resources/images/Gardens2.jpg" id="img1" alt=""></a>
+          <a href="https://www.google.com/maps/dir//3199,+Urban+Estate+Dugri,+Phase+2,+Urban+Estate+Dugri,+Ludhiana,+Punjab+141002/@30.8714831,75.7494626,12z/data=!3m1!4b1!4m8!4m7!1m0!1m5!1m1!1s0x391a8240cba16c4b:0xb96341a0afcc9c31!2m2!1d75.8318639!2d30.8715092?entry=ttu"><h3 id="h31" >Amaltas Garden - Community Garden</h3></a>
           <p id="p1">3.6</p><i id="i1" class='bx bxs-star' style='color:#f3e400'  ></i><i id="i2" class='bx bxs-star' style='color:#f3e400'  ></i><i id="i3" class='bx bxs-star' style='color:#f3e400'  ></i><i id="i4" class='bx bxs-star-half' style='color:#f3e400' ></i> <i id="i5" class='bx bx-star' style='color:#f3e400' ></i><p id="p2">(27) Garden Ludhiana</p>
         </div>
         <!-- PAGE 9 -->
