--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <hr id="hr3">
         <!-- PAGE 7 -->
         <div id="page7">
-          <h1>Local Community Gardens</h1>
+          <h1><span id="element2"></span></h1>
           <a href="https://www.google.com/maps/dir//PQ27%2BCGM,+Sukhna+Path,+46A,+Sector+46,+Chandigarh,+160047/@30.7010529,76.6813881,12z/data=!3m1!4b1!4m8!4m7!1m0!1m5!1m1!1s0x390fec442e35f357:0x57865478e6421726!2m2!1d76.7637894!2d30.7010789?entry=ttu" target="_blank" ><img src="resources/images/Gardens" id="img1" alt=""></a>
           <a href="https://www.google.com/maps/dir//PQ27%2BCGM,+Sukhna+Path,+46A,+Sector+46,+Chandigarh,+160047/@30.7010529,76.6813881,12z/data=!3m1!4b1!4m8!4m7!1m0!1m5!1m1!1s0x390fec442e35f357:0x57865478e6421726!2m2!1d76.7637894!2d30.7010789?entry=ttu" target="_blank" ><h3 id="h31" >Gardens Of Shrubs - Community Garden</h3></a>
           <p id="p1">4.4</p><i id="i1" class='bx bxs-star' style='color:#f3e400'  ></i><i id="i2" class='bx bxs-star' style='color:#f3e400'  ></i><i id="i3" class='bx bxs-star' style='color:#f3e400'  ></i><i id="i4" class='bx bxs-star' style='color:#f3e400'  ></i><i id="i5" class='bx bxs-star-half' style='color:#f3e400' ></i><p id="p2">(167) Garden Chandigarh</p>
@@ -92,8 +92,8 @@
         </div>
         <!-- PAGE 9 -->
         <div id="page9">
-          <img src="resources/images/Gardens3.jpg" id="img1" alt="">
-          <h3 id="h31" >Garden Of Annuals - Community Garden</h3>
+          <a href="https://www.google.com/maps/dir//PQ74%2BC2R,+Sector+44+A,+Sector+50D,+Sector+44,+Chandigarh,+160047/@30.7135795,76.6726223,12z/data=!3m1!4b1!4m8!4m7!1m0!1m5!1m1!1s0x390fec35bcbf8a31:0x5819dae281623166!2m2!1d76.7550236!2d30.7136055?entry=ttu" target="_blank"><img src="resources/images/Gardens3.jpg" id="img1" alt=""></a>
+          <a href="https://www.google.com/maps/dir//PQ74%2BC2R,+Sector+44+A,+Sector+50D,+Sector+44,+Chandigarh,+160047/@30.7135795,76.6726223,12z/data=!3m1!4b1!4m8!4m7!1m0!1m5!1m1!1s0x390fec35bcbf8a31:0x5819dae281623166!2m2!1d76.7550236!2d30.7136055?entry=ttu" target="_blank"><h3 id="h31" >Garden Of Annuals - Community Garden</h3></a>
           <p id="p1">4.4</p><i id="i1" class='bx bxs-star' style='color:#f3e400'  ></i><i id="i2" class='bx bxs-star' style='color:#f3e400'  ></i><i id="i3" class='bx bxs-star' style='color:#f3e400'  ></i><i id="i4" class='bx bxs-star' style='color:#f3e400'  ></i><i id="i5" class='bx bxs-star-half' style='color:#f3e400' ></i><p id="p2">(818) Garden Chandigarh</p>
     </div>
     <script src="resources/scripts/gsap.min.js"></script>
