--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <!-- NAV BAR -->
     <div id="nav">
-      <img src="resources/images/logo.png" alt="" />
+      <a href="#page1"><img src="resources/images/logo.png" alt="" /></a>
       <a href="#page2"><h3 class="animation">ISSUES</h3></a>
       <a href="#page5"><h3 class="animation">TRACKS</h3></a>
       <a href="#page6"><h3 class="animation">RECOMMENDATIONS</h3></a>
