--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       <a href="#page5"><h3 class="animation">TRACKS</h3></a>
       <a href="#page6"><h3 class="animation">RECOMMENDATIONS</h3></a>
       <a href="#page7"><h3 class="animation">GARDENS</h3></a>
-      <h3 class="animation">BUSINESSES</h3>
-      <a href="login/index.html"><h3 class="animation">LOGIN</h3></a>
+      <h3 class="animation">Centers</h3>
+      <h3 class="animation">Bussiness</h3><
     </div>
     <!-- BACKGROUND IMAGE -->
     <img id="img"src="resources/images/background.jpg" alt="">
